# icemp

./: Cargo.toml
src/: config.rs  main.rs  song.rs  ui.rs
src/ui/: lyrics.rs  utils.rs
