[package]
name = "icemp"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3

[dependencies]
iced = { version = "0.14.0", features = ["image", "tokio", "wgpu"] }
image = "0.25.10"
libblur = { version = "0.23.3", features = ["fft", "image"] }
lofty = "0.24.0"
rfd = "0.17.2"
rodio = "0.22.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.0", features = ["full"] }
