[package]
name = "icemp"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "icemp"
identifier = "io.github.bks34.icemp"
icon = ["images/icon.png"]
version = "0.1.0"

[profile.release]
opt-level = 3

[dependencies]
iced = { version = "0.14.0", features = ["image", "tokio", "wayland"] }
image = "0.25.10"
libblur = { version = "0.23.3", features = ["image"] }
lofty = "0.24.0"
rfd = "0.17.2"
rodio = "0.22.2"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.1"
dirs = "6.0.0"
